# maroon

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  rustfmt.toml
.github/workflows/: gate.yml  make-targets.yml  run_tests.yml  rust_manual_test.yml  verify.yml
common/: Cargo.toml
common/src/: duplex_channel.rs  invoker_handler.rs  lib.rs  log_events.rs  logical_time.rs  m2m_request_response.rs  node2gw.rs  range_key.rs  retrier.rs  transaction.rs
common/src/clock/: mod.rs  test_helpers.rs
common/src/logical_clock/: mod.rs  test_helpers.rs
cpp_ir/: .gitignore  00_smoke.mrn  01_simple.mrn  02_ignored.mrn  03_death_tests.mrn  04_vars.mrn  05_if.mrn  06_call.mrn  07_factorial.mrn  08_type.mrn  09_args.mrn  10_optional.mrn  11_opt_type.mrn  12_opt_field.mrn  13_enum.mrn  Makefile  README.md  ir2test.sh  mrn2ir.sh  run_tests.sh  verify.sh
cpp_ir/autogen/: 00_smoke.mrn.json  01_simple.mrn.json  02_ignored.mrn.json  03_death_tests.mrn.json  04_vars.mrn.json  05_if.mrn.json  06_call.mrn.json  07_factorial.mrn.json  08_type.mrn.json  09_args.mrn.json  10_optional.mrn.json  11_opt_type.mrn.json  12_opt_field.mrn.json  13_enum.mrn.json  ir_schema.md  ir_schema.rs
cpp_ir/rust/: .gitignore  Cargo.toml  manual_test.sh  rustfmt.toml
cpp_ir/rust/src/: ir_schema.rs  main.rs
cpp_ir/src/: diff_ir.cc  engine.h  gen_markdown_schema.cc  gen_test.cc  ir.h  output_schema.cc
cpp_ir/src/boilerplate/: dsl.prefix.h  dsl.spec.h
deploy/etcd/: Dockerfile  Readme.md
docs/: Readme.md  active-tasks-queue.md  aligned-execution.md  dsl-examples-echo.md  dsl-language.md  fiber.md  gateway.md  global-queue.md  keys-range.md  language-whitepaper.md  leader-election.md  maroon-node.md  overview.md
dsl/: Cargo.toml  Readme.md  build.rs
dsl/src/: ast.rs  codegen.rs  dsl.rs  dsl_to_ir.rs  generated_ir.rs  generated_test.rs  generated_types.rs  grammar.pest  ir.rs  ir_test.rs  lib.rs  parsed_ast_test.rs  parser.rs  simple_functions_generated_test.rs  simple_functions_ir_test.rs  state_generator.rs  state_generator_test.rs  test.rs
dsl/src/simple_function/: active_tasks.rs  active_tasks_test.rs  fiber.rs  generated.rs  generated_test.rs  ir.rs  ir_test.rs  mod.rs  runtime.rs  runtime_timer.rs  task.rs
epochCoordinator/: Cargo.toml
epochCoordinator/src/: interface.rs  lib.rs
epoch_coordinator/: Cargo.toml  README.md
epoch_coordinator/docker/etcd/: Readme.md  delays.sh  docker-compose.yaml
epoch_coordinator/src/: epoch.rs  etcd.rs  interface.rs
epoch_coordinator/tests/: etcd_epoch_coordinator.rs
gateway/: Cargo.toml
gateway/docker/: Dockerfile  docker-compose.yaml
gateway/src/: core.rs  lib.rs  main.rs  network_interface.rs  p2p.rs
github.io/: README.md  demo.html  index.html
maroon/: AGENTS.md  Cargo.toml
maroon/docker/: Dockerfile  docker-compose.yaml
maroon/src/: epoch.rs  epoch_decision_engine.rs  lib.rs  linearizer.rs  macros.rs  main.rs  metrics.rs  stack.rs  test_helpers.rs
maroon/src/app/: app.rs  app_metrics.rs  decider.rs  interface.rs  mod.rs  params.rs  tests_single.rs
maroon/src/epoch_coordinator/: epoch.rs  etcd.rs  interface.rs  mod.rs
maroon/src/network/: interface.rs  mod.rs  p2p.rs
metrics/: README.md  docker-compose.yaml  otel-collector-config.yaml  prometheus.yaml
metrics/dashboards/: default.json
metrics/provisioning/dashboards/: dashboards.yaml
protocol/: Cargo.toml
protocol/src/: gm_request_response.rs  lib.rs  m2m_request_response.rs  meta_exchange.rs  node2gw.rs  transaction.rs
runtime/: AGENTS.md  Cargo.toml  Readme.md  build.rs
runtime/src/: fiber.rs  generated.rs  generated_test.rs  ir_spec.rs  ir_test.rs  lib.rs  runtime.rs  runtime_timer.rs  test_helpers.rs  trace.rs  wait_registry.rs
schema/: Cargo.toml
schema/src/: lib.rs  mn_events.rs
scripts/: run-test-stack.sh
src/: main.rs  maroon.rs
state/: Cargo.toml
state/src/: generated_types.rs  lib.rs  main.rs  maroon.rs
state/test/: smoke.rs
state_log/: Cargo.toml
state_log/docker/redis/: docker-compose.yaml
state_log/src/: lib.rs  logger.rs  tests.rs
test/: smoke.rs
tests/: Readme.md  http_threads.sh  ob_ws_collapse.js  ob_ws_cycle.js  ob_ws_submit.js
tests/deploy/etcd/: delays.sh  docker-compose.yaml
tests/integration/: Cargo.toml
tests/integration-dockerized/: Cargo.toml
tests/integration-dockerized/src/: lib.rs
tests/integration/src/: basic.rs  etcd_epoch_coordinator.rs  lib.rs  request_missed_txs.rs
types/: Cargo.toml
types/src/: lib.rs  logical_time.rs  range_key.rs
util/: Cargo.toml  gen_demo_log.rs  visualize_log.html
