[workspace]
members = ["state", "common"]
resolver = "3"

[workspace.dependencies]
env_logger = "0.11.6"
libp2p = { version = "0.55.0", default-features = false, features = [
  "tcp",
  "tokio",
  "noise",
  "yamux",
  "gossipsub",
  "ping",
  "macros",
  "plaintext",
  "serde",
  "gossipsub",
  "dns",
  "tls",
] }
libp2p-request-response = { version = "0.28.0", features = ["json"] }
log = "0.4.26"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
