[workspace]
members = [
  "state",
  "common",
  "gateway",
  "maroon",
  "tests/integration",
  "epoch_coordinator",
  "util",
]
resolver = "3"

[workspace.dependencies]
env_logger = "0.11.6"
etcd-client = "0.14.1"
futures = "0.3"
libp2p = { version = "0.55.0", default-features = false, features = [
  "tcp",
  "tokio",
  "noise",
  "yamux",
  "gossipsub",
  "ping",
  "macros",
  "plaintext",
  "serde",
  "gossipsub",
  "dns",
  "tls",
] }
libp2p-request-response = { version = "0.28.0", features = ["json"] }
log = "0.4.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
