[package]
edition = "2024"
name = "common"
version = "0.1.0"

[dependencies]
derive_more = { version = "2.0.1", features = ["add", "add_assign", "display"] }
env_logger = { workspace = true }
libp2p = { workspace = true }
libp2p-request-response = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
