[package]
edition = "2024"
name = "epoch_coordinator"
rust-version = "1.86.0"
version = "0.1.0"

[dependencies]
chrono = "0.4.41"
common = { path = "../common" }
derive_more = { version = "2.0.1", features = ["from", "display"] }
env_logger = { workspace = true }
etcd-client = { workspace = true }
futures = { workspace = true }
libp2p = { workspace = true }
libp2p-request-response = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10.8"
tokio = { workspace = true }
