[package]
edition = "2024"
name = "gateway"
rust-version = "1.86.0"
version = "0.1.0"

[dependencies]
common = { path = "../common" }
derive_more = { version = "2.0.1", features = ["from"] }
env_logger = { workspace = true }
futures = { workspace = true }
libp2p = { workspace = true }
libp2p-request-response = { workspace = true }
log = { workspace = true }
schema = { path = "../schema" }
serde = { workspace = true }
serde_json = { workspace = true }
state_log = { path = "../state_log" }
tokio = { workspace = true }
