[package]
edition = "2024"
name = "gateway"
rust-version = "1.86.0"
version = "0.1.0"

[dependencies]
axum = { version = "0.8.3", features = ["ws"] }
common = { path = "../common" }
derive_more = { version = "2.0.1", features = ["from"] }
futures = { workspace = true }
generated = { path = "../generated" }
libp2p = { workspace = true }
libp2p-request-response = { workspace = true }
protocol = { path = "../protocol" }
schema = { path = "../schema" }
serde = { workspace = true }
serde_json = { workspace = true }
state_log = { path = "../state_log" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
types = { path = "../types" }
