[package]
edition = "2024"
name = "integration-dockerized"
version = "0.1.0"

[dependencies]
common = { path = "../../common" }
env_logger = { workspace = true }
etcd-client = { workspace = true }
futures = { workspace = true }
gateway = { path = "../../gateway" }
libp2p = { workspace = true }
maroon = { path = "../../maroon" }
tokio = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
