[package]
edition = "2024"
name = "integration"
version = "0.1.0"

[dependencies]
common = { path = "../../common" }
types = { path = "../../types" }
protocol = { path = "../../protocol" }
generated = { path = "../../generated" }
env_logger = { workspace = true }
futures = { workspace = true }
gateway = { path = "../../gateway" }
libp2p = { workspace = true }
maroon = { path = "../../maroon" }
tokio = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
