[package]
edition = "2024"
name = "integration"
version = "0.1.0"

[dependencies]
common = { path = "../../common" }
env_logger = { workspace = true }
futures = { workspace = true }
gateway = { path = "../../gateway" }
generated = { path = "../../generated" }
libp2p = { workspace = true }
maroon = { path = "../../maroon" }
protocol = { path = "../../protocol" }
tokio = { workspace = true }
types = { path = "../../types" }

[dev-dependencies]
tokio-test = "0.4"
